[gd_scene load_steps=2 format=2]

[ext_resource path="res://nodeeditor/NodeTree.gd" type="Script" id=1]

[node name="GraphEdit" type="GraphEdit"]

self_modulate = Color( 1, 1, 1, 0.281765 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1030.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
right_disconnects = true
scroll_offset = Vector2( 0, 0 )
snap_distance = 20
use_snap = false
zoom = 1.0
script = ExtResource( 1 )
_sections_unfolded = [ "Visibility" ]

[connection signal="connection_request" from="." to="." method="_on_GraphEdit_connection_request"]

[connection signal="delete_nodes_request" from="." to="." method="_on_GraphEdit_delete_nodes_request"]

[connection signal="disconnection_request" from="." to="." method="_on_GraphEdit_disconnection_request"]

[connection signal="duplicate_nodes_request" from="." to="." method="_on_GraphEdit_duplicate_nodes_request"]

[connection signal="node_selected" from="." to="." method="_on_GraphEdit_node_selected"]


